@@ -1,3 +1,9 @@
+2012-05-13  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* src/model/options.cpp:
+	* src/qt4/debug_message_window.cpp:
+	- オフラインクライアント実行後にデバッグビューログも自動で読み込むように修正
+
 2012-05-12  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* configure.ac:
